# fake

./: .gitignore  fake.cabal  index.html  online-random.cabal  package.yaml  readme.md  stack.yaml
app/: app.hs  example.lhs  scratchpad.hs
other/: answer.md
src/Fake/: Data.hs
src/Online/: Random.hs
test/: test.hs
