cabal-version: 2.0
name:           online-random
version:        0.0.1.0
synopsis:       Random numeric streams
description:    Random numeric streams used to test the online library.
category:       project
homepage:       https://github.com/tonyday567/online-random#readme
bug-reports:    https://github.com/tonyday567/online-random/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    readme.md

source-repository head
  type: git
  location: https://github.com/tonyday567/online-random

library
  exposed-modules:
      Online.Random
  hs-source-dirs:
      src
  default-extensions: NoImplicitPrelude UnicodeSyntax NegativeLiterals OverloadedStrings
  build-depends:
      base >=4.7 && <5
    , containers
    , foldl
    , lens
    , mwc-probability
    , mwc-random
    , online
    , primitive
    , numhask-prelude
    , numhask-array
  default-language: Haskell2010

executable online-random
  main-is: app.hs
  hs-source-dirs:
      app
  default-extensions: NoImplicitPrelude UnicodeSyntax NegativeLiterals OverloadedStrings
  ghc-options: -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      JuicyPixels
    , base >=4.7 && <5
    , numhask-prelude
    , chart-svg
    , foldl
    , generic-lens
    , lens
    , mwc-random
    , online
    , online-random
    , optparse-generic
    , text
    , readme-lhs
    , numhask-array
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
      test
  default-extensions: NoImplicitPrelude UnicodeSyntax NegativeLiterals OverloadedStrings
  build-depends:
      base >=4.7 && <5
    , doctest
  default-language: Haskell2010
